--- a/android/src/main/res/layout/activity_incoming_call.xml
+++ b/android/src/main/res/layout/activity_incoming_call.xml
@@ -1,37 +1,117 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8" ?>
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/manager_call_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    android:orientation="vertical"
+    android:background="@drawable/bg_incoming_call_screen"
     tools:context="io.wazo.callkeep.IncomingCallActivity"
-    tools:showIn="@layout/activity_incoming_call">
+    >
 
-    <LinearLayout
+    <RelativeLayout
+        android:id="@+id/header_incoming"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="16dp"
-        android:orientation="horizontal"
-        android:padding="16dp">
+        android:orientation="vertical"
+        android:visibility="visible"
+        >
 
-        <Button
-            android:id="@+id/btn_reject"
-            android:layout_width="0dp"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="40dp"
+                android:layout_marginBottom="40dp"
+                android:gravity="center"
+                android:text="@string/incoming_call"
+                android:textSize="20sp"
+                android:textStyle="normal"
+                android:textColor="@color/enna_secondary"
+                android:fontFamily="@font/inter_medium"
+                app:layout_constraintBottom_toTopOf="@+id/card_avatar"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/card_avatar"
+                android:layout_width="140dp"
+                android:layout_height="140dp"
+                android:layout_marginTop="40dp"
+                android:elevation="0dp"
+                app:cardCornerRadius="50dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView2">
+
+                <ImageView
+                    android:id="@+id/avatar"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_centerHorizontal="true"
+                    android:gravity="center" />
+            </androidx.cardview.widget.CardView>
+
+            <TextView
+                android:id="@+id/txt_caller_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="40dp"
+                android:gravity="center"
+                android:maxLines="2"
+                android:paddingHorizontal="20dp"
+                android:text="Caller Name"
+                android:textColor="@color/enna_secondary"
+                android:fontFamily="@font/sentient"
+                android:textSize="36sp"
+                android:textStyle="bold"
+                app:layout_constraintTop_toBottomOf="@+id/card_avatar"
+                tools:layout_editor_absoluteX="0dp" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/view_incoming_call"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="visible"
+        >
+
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            android:padding="8dp"
-            android:text="Reject" />
+            android:layout_alignParentBottom="true"
+            android:layout_centerInParent="true"
+            android:layout_marginBottom="40dp">
 
-        <Button
-            android:id="@+id/btn_accept"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            android:padding="8dp"
-            android:text="Answer" />
+            <Button
+                android:id="@+id/btn_accept"
+                android:layout_width="65dp"
+                android:layout_height="65dp"
+                android:background="@drawable/btn_answer"
+                android:drawableLeft="@drawable/ic_answer"
+                android:paddingLeft="13dp"
+                android:paddingTop="39dp" />
 
-    </LinearLayout>
+            <Button
+                android:id="@+id/btn_reject"
+                android:layout_width="65dp"
+                android:layout_height="65dp"
+                android:layout_marginLeft="200dp"
+                android:background="@drawable/btn_reject"
+                android:drawableLeft="@drawable/ic_reject"
+                android:paddingLeft="13dp"
+                android:paddingTop="39dp" />
+        </LinearLayout>
+
+    </RelativeLayout>
 
 </RelativeLayout>
