--- a/android/src/main/res/layout/activity_incoming_call.xml
+++ b/android/src/main/res/layout/activity_incoming_call.xml
@@ -45,9 +45,9 @@
                 android:id="@+id/card_avatar"
                 android:layout_width="140dp"
                 android:layout_height="140dp"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="80dp"
                 android:elevation="0dp"
-                app:cardCornerRadius="50dp"
+                app:cardCornerRadius="40dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView2">
@@ -57,7 +57,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_centerHorizontal="true"
-                    android:gravity="center" />
+                    android:gravity="center"
+                    android:contentDescription="@string/enna_profile_picture" />
             </androidx.cardview.widget.CardView>
 
             <TextView
@@ -68,50 +69,44 @@
                 android:gravity="center"
                 android:maxLines="2"
                 android:paddingHorizontal="20dp"
-                android:text="Caller Name"
+                android:text="@string/enna"
                 android:textColor="@color/enna_secondary"
-                android:fontFamily="@font/sentient"
-                android:textSize="36sp"
-                android:textStyle="bold"
+                android:fontFamily="@font/sentient_bold"
+                android:textSize="32sp"
                 app:layout_constraintTop_toBottomOf="@+id/card_avatar"
                 tools:layout_editor_absoluteX="0dp" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </RelativeLayout>
 
-    <RelativeLayout
-        android:id="@+id/view_incoming_call"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="visible"
-        >
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerInParent="true"
+        android:layout_marginBottom="40dp">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerInParent="true"
-            android:layout_marginBottom="40dp">
+        <Button
+            android:id="@+id/btn_accept"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
+            android:background="@drawable/btn_answer"
+            android:contentDescription="@string/answer"
+            android:drawableLeft="@drawable/ic_answer"
+            android:paddingLeft="13dp"
+            android:paddingTop="39dp"
+            style="?android:attr/buttonBarButtonStyle" />
 
-            <Button
-                android:id="@+id/btn_accept"
-                android:layout_width="65dp"
-                android:layout_height="65dp"
-                android:background="@drawable/btn_answer"
-                android:drawableLeft="@drawable/ic_answer"
-                android:paddingLeft="13dp"
-                android:paddingTop="39dp" />
-
-            <Button
-                android:id="@+id/btn_reject"
-                android:layout_width="65dp"
-                android:layout_height="65dp"
-                android:layout_marginLeft="200dp"
-                android:background="@drawable/btn_reject"
-                android:drawableLeft="@drawable/ic_reject"
-                android:paddingLeft="13dp"
-                android:paddingTop="39dp" />
-        </LinearLayout>
-
-    </RelativeLayout>
+        <Button
+            android:id="@+id/btn_reject"
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
+            android:layout_marginLeft="180dp"
+            android:background="@drawable/btn_reject"
+            android:contentDescription="@string/decline"
+            android:drawableLeft="@drawable/ic_reject"
+            android:paddingLeft="13dp"
+            android:paddingTop="39dp" />
+    </LinearLayout>
 
 </RelativeLayout>
