--- a/android/src/main/res/layout/custom_call_notification.xml
+++ b/android/src/main/res/layout/custom_call_notification.xml
@@ -74,7 +74,7 @@
             android:layout_marginEnd="5dp"
             android:layout_weight="0.5"
             android:backgroundTint="@color/reject"
-            android:drawableLeft="@drawable/ic_call_reject_white"
+            android:drawableLeft="@drawable/ic_reject"
             android:fontFamily="@font/inter_bold"
             android:text="@string/decline"
             android:textAllCaps="false"
@@ -88,7 +88,7 @@
             android:layout_marginStart="5dp"
             android:layout_weight="0.5"
             android:backgroundTint="@color/turtle_green"
-            android:drawableLeft="@drawable/ic_call_accept_white"
+            android:drawableLeft="@drawable/ic_answer"
             android:fontFamily="@font/inter_bold"
             android:text="@string/answer"
             android:textAllCaps="false"
